--- a/camera/src/main/res/layout/fragment_camera.xml
+++ b/camera/src/main/res/layout/fragment_camera.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/cameraContainer"
-    tools:context="CameraFragment">
+    tools:context="CameraFragmentX">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ll_camera"
