--- a/xcamera/src/main/res/layout/fragment_camera.xml
+++ b/xcamera/src/main/res/layout/fragment_camera.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/cameraContainer"
-    tools:context="CameraFragmentX">
+    tools:context="XCameraFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ll_camera"
@@ -124,7 +124,6 @@
                 android:layout_margin="@dimen/_10sdp"
                 android:text="@string/cancel"
                 android:padding="@dimen/_10sdp"
-                android:fontFamily="@font/hiddle_regular"
                 android:layout_alignParentStart="true"
                 android:textColor="#fff" />
 
@@ -134,7 +133,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:padding="@dimen/_10sdp"
-                android:fontFamily="@font/hiddle_regular"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
