--- a/xcamera/src/main/res/navigation/camera_nav.xml
+++ b/xcamera/src/main/res/navigation/camera_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/cameraFragment"
-        android:name="com.mobizion.camera.CameraFragmentX"
+        android:name="com.mobizion.camera.XCameraFragment"
         android:label="fragment_camera"
         tools:layout="@layout/fragment_camera" />
 </navigation>
