--- a/xfilemanager/src/main/res/values/colors.xml
+++ b/xfilemanager/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="primaryDarkColor">#0078c4</color>
     <color name="primaryTextColor">#000000</color>
     <color name="white">#fff</color>
-    <color name="background_color">#D7EFFB</color>
+    <color name="background_color">#1E1E1E</color>
 </resources>
